tests/ucc/bind/good/incomplete-type-ptr-2.c
int main(void)
{
    struct test *a;
    return 0;
}
