tests/ucc/bind/bad/struct-in-struct.c
struct a
{
    struct a a;
};

int main(void)
{
    struct a a;
    return 0;
}
